fix(MobileUI): max height on advanced send to avoid overflow issues

--- a/assets/css/modules/_send-receive.scss
+++ b/assets/css/modules/_send-receive.scss
@@ -153,6 +153,7 @@
   }
 
   &.advanced-container {
+    max-height: 460px; // avoid overflow issues
     .add {
       background-color: $aaa;
       border-radius: 100%;
